doc: document classes