@@ -2,24 +2,27 @@ package Util.Creator.ItemsCreator;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
+/**
+ * A utility class for centralize the creation of allowedTo options.
+ */
 public class ItemsLimitationCreator {
 
-
-    public static ArrayList<String> allHeroes(){
+    public static ArrayList<String> allHeroes() {
         return new ArrayList<>(Arrays.asList("Intern", "SalesRepresentative", "Receptionist"));
     }
 
     public static ArrayList<String> internOnly() {
-        return new ArrayList<>(Arrays.asList("Intern"));
+        return new ArrayList<>(List.of("Intern"));
     }
 
     public static ArrayList<String> salesOnly() {
-        return new ArrayList<>(Arrays.asList("SalesRepresentative"));
+        return new ArrayList<>(List.of("SalesRepresentative"));
     }
 
     public static ArrayList<String> receptionistOnly() {
-        return new ArrayList<>(Arrays.asList("Receptionist"));
+        return new ArrayList<>(List.of("Receptionist"));
     }
 
     public static ArrayList<String> internAndSales() {
